--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body {
+    /* background: #acaccd; */
+    background: #0f0f10;
+    color: #fff;
+}
+
+input, textarea {
+    color: #000;
+}
